refactor: improve parameter naming and code readability in deserializers and authentication converter